<resources>
    <string name="app_name">FormulaWorld</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="title_store">Store</string>
    <string name="title_bets">Bets</string>
    <string name="title_more">More</string>
    <string name="sign_in">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>

    <string name="facebook_app_id" translatable="false">1078741456234485</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1078741456234485</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="update">Update</string>
    <string name="vat">VAT</string>
    <string name="phone">Phone</string>
    <string name="bets_fragment">Bets fragment</string>
    <string name="pilots">Pilots</string>
    <string name="teams">Teams</string>
    <string name="create_new_account">Create new account</string>
    <string name="title_classification">Classification</string>
    <string name="cars">Cars</string>
    <string name="news_button">...</string>

</resources>