<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_ranking"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_bets"
        android:icon="@drawable/ic_bets"
        android:title="@string/title_bets" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_three_dots"
        android:title="@string/title_more" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />

</menu>