<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ipca.formulaworld.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.ipca.formulaworld.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_bets"
        android:name="com.ipca.formulaworld.ui.bets.BetsFragment"
        android:label="@string/title_bets"
        tools:layout="@layout/fragment_bets" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.ipca.formulaworld.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.ipca.formulaworld.ui.more.MoreFragment"
        android:label="User"
        tools:layout="@layout/fragment_more" />
</navigation>