<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/alice_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/profile_firstNameLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/profile_firstNameEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_medium"
            android:hint="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_firstNameLabel"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/profile_lastNameLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_firstNameEditText"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/profile_lastNameEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_lastNameLabel" />

        <TextView
            android:id="@+id/profile_vatLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/vat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_lastNameEditText"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/profile_VatEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/vat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_vatLabel" />

        <TextView
            android:id="@+id/profile_phoneLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_VatEditText"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/profile_phoneEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_phoneLabel" />

        <TextView
            android:id="@+id/profile_emailLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_phoneEditText"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/profile_emailTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/e_mail"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_emailLabel" />

        <TextView
            android:id="@+id/profile_passwordLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_emailTextView"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/profile_passwordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_passwordLabel" />

        <Button
            android:id="@+id/profile_submitButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/update"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:onClick="updateProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_passwordEditText" />

        <Button
            android:id="@+id/google_logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/sign_out"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_submitButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>